unpackaged/main/default/objects/CMPL123CME__Submission_History__c/CMPL123CME__Submission_History__c.object-meta.xml
<CustomObject>
    <label>Submission History</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Submission Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>