unpackaged/main/default/objects/CMPL123CME__Submission_History__c/fields/CMPL123CME__Batch_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>254</length>
        <type>Text</type>
    </CustomField>