unpackaged/main/default/objects/CMPL123CME__Submission_History__c/fields/CMPL123CME__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>