unpackaged/main/default/objects/CMPL123CME__Submission_History__c/fields/CMPL123CME__FDA_Submission_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__FDA_Submission_Date__c</fullName>
        <description>FDA Submission Date</description>
        <inlineHelpText>FDA Submission Date</inlineHelpText>
        <label>FDA Submission/Received Date</label>
        <type>DateTime</type>
    </CustomField>