unpackaged/main/default/objects/CMPL123CME__Submission_History__c/fields/CMPL123CME__Message__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Message__c</fullName>
        <description>Message</description>
        <inlineHelpText>Message</inlineHelpText>
        <label>Message</label>
        <length>254</length>
        <type>Text</type>
    </CustomField>