unpackaged/main/default/objects/CMPL123CME__Submission_History__c/fields/CMPL123CME__Message_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Message_Id__c</fullName>
        <description>FDA ACK Message Id</description>
        <inlineHelpText>FDA ACK Message Id</inlineHelpText>
        <label>Message Id</label>
        <length>254</length>
        <type>Text</type>
    </CustomField>