unpackaged/main/default/objects/CMPL123CME__Submission_History__c/fields/CMPL123CME__Related_EMDR__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Related_EMDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related EMDR Record</description>
        <inlineHelpText>Related EMDR</inlineHelpText>
        <label>Related EMDR</label>
        <referenceTo>CMPL123CME__EMDR__c</referenceTo>
        <relationshipName>EMDR_FDA_ACKs</relationshipName>
        <type>Lookup</type>
    </CustomField>