unpackaged/main/default/objects/CMPL123CME__Submission_History__c/fields/CMPL123CME__Source__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Source__c</fullName>
        <description>Source</description>
        <inlineHelpText>Source</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FDA</fullName>
                </value>
                <value>
                    <fullName>123Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>