unpackaged/main/default/objects/CMPL123CME__Submission_History__c/fields/CMPL123CME__Stage__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Stage__c</fullName>
        <description>Submission Statge</description>
        <inlineHelpText>Submission Statge</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>ACK1</fullName>
                </value>
                <value>
                    <fullName>ACK2</fullName>
                </value>
                <value>
                    <fullName>ACK3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>