unpackaged/main/default/objects/CMPL123CME__Submission_History__c/fields/CMPL123CME__Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>